--- a/src/main/resources/templates/admin/places.html
+++ b/src/main/resources/templates/admin/places.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-
+<p>
+    this is places page.
+</p>
+    <ul>
+        <!--?: _로 기본값을 주었다.-->
+        <li>placeType:<span th:text="${placeType} ?: _">?</span></li>
+        <li>placeName:<span th:text="${placeName} ?: _">?</span></li>
+        <li>address:<span th:text="${address} ?: _">?</span></li>
+    </ul>
 </body>
 </html>
